rbx_binary/src/tests/snapshots/text_deserializer__default_inserted_part.snap
---
source: rbx_binary/src/tests/text_deserializer.rs
expression: decoded
---
num_types: 1
num_instances: 1
chunks:
  - Meta:
      entries:
        - - ExplicitAutoJoints
          - "true"
  - Inst:
      type_id: 0
      type_name: Part
      object_format: 0
      referents:
        - 0
  - Prop:
      type_id: 0
      prop_name: Anchored
      prop_type: Bool
      values:
        - false
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 0
      prop_name: BackParamA
      prop_type: Float32
      remaining: fgAAAQ==
  - Prop:
      type_id: 0
      prop_name: BackParamB
      prop_type: Float32
      remaining: fgAAAA==
  - Prop:
      type_id: 0
      prop_name: BackSurface
      prop_type: Enum
      remaining: AAAAAA==
  - Prop:
      type_id: 0
      prop_name: BackSurfaceInput
      prop_type: Enum
      remaining: AAAAAA==
  - Prop:
      type_id: 0
      prop_name: BottomParamA
      prop_type: Float32
      remaining: fgAAAQ==
  - Prop:
      type_id: 0
      prop_name: BottomParamB
      prop_type: Float32
      remaining: fgAAAA==
  - Prop:
      type_id: 0
      prop_name: BottomSurface
      prop_type: Enum
      remaining: AAAAAA==
  - Prop:
      type_id: 0
      prop_name: BottomSurfaceInput
      prop_type: Enum
      remaining: AAAAAA==
  - Prop:
      type_id: 0
      prop_name: CFrame
      prop_type: CFrame
      remaining: AoGAAAF+AAAggoAAAQ==
  - Prop:
      type_id: 0
      prop_name: CanCollide
      prop_type: Bool
      values:
        - true
  - Prop:
      type_id: 0
      prop_name: CastShadow
      prop_type: Bool
      values:
        - true
  - Prop:
      type_id: 0
      prop_name: CollisionGroupId
      prop_type: Int32
      remaining: AAAAAA==
  - Prop:
      type_id: 0
      prop_name: Color3uint8
      prop_type: Color3uint8
      remaining: o6Kl
  - Prop:
      type_id: 0
      prop_name: CustomPhysicalProperties
      prop_type: PhysicalProperties
      remaining: AA==
  - Prop:
      type_id: 0
      prop_name: FrontParamA
      prop_type: Float32
      remaining: fgAAAQ==
  - Prop:
      type_id: 0
      prop_name: FrontParamB
      prop_type: Float32
      remaining: fgAAAA==
  - Prop:
      type_id: 0
      prop_name: FrontSurface
      prop_type: Enum
      remaining: AAAAAA==
  - Prop:
      type_id: 0
      prop_name: FrontSurfaceInput
      prop_type: Enum
      remaining: AAAAAA==
  - Prop:
      type_id: 0
      prop_name: LeftParamA
      prop_type: Float32
      remaining: fgAAAQ==
  - Prop:
      type_id: 0
      prop_name: LeftParamB
      prop_type: Float32
      remaining: fgAAAA==
  - Prop:
      type_id: 0
      prop_name: LeftSurface
      prop_type: Enum
      remaining: AAAAAA==
  - Prop:
      type_id: 0
      prop_name: LeftSurfaceInput
      prop_type: Enum
      remaining: AAAAAA==
  - Prop:
      type_id: 0
      prop_name: Locked
      prop_type: Bool
      values:
        - false
  - Prop:
      type_id: 0
      prop_name: Massless
      prop_type: Bool
      values:
        - false
  - Prop:
      type_id: 0
      prop_name: Material
      prop_type: Enum
      remaining: AAABAA==
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - Part
  - Prop:
      type_id: 0
      prop_name: Reflectance
      prop_type: Float32
      remaining: AAAAAA==
  - Prop:
      type_id: 0
      prop_name: RightParamA
      prop_type: Float32
      remaining: fgAAAQ==
  - Prop:
      type_id: 0
      prop_name: RightParamB
      prop_type: Float32
      remaining: fgAAAA==
  - Prop:
      type_id: 0
      prop_name: RightSurface
      prop_type: Enum
      remaining: AAAAAA==
  - Prop:
      type_id: 0
      prop_name: RightSurfaceInput
      prop_type: Enum
      remaining: AAAAAA==
  - Prop:
      type_id: 0
      prop_name: RootPriority
      prop_type: Int32
      remaining: AAAAAA==
  - Prop:
      type_id: 0
      prop_name: RotVelocity
      prop_type: Vector3
      remaining: AAAAAAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 0
      prop_name: TopParamA
      prop_type: Float32
      remaining: fgAAAQ==
  - Prop:
      type_id: 0
      prop_name: TopParamB
      prop_type: Float32
      remaining: fgAAAA==
  - Prop:
      type_id: 0
      prop_name: TopSurface
      prop_type: Enum
      remaining: AAAAAA==
  - Prop:
      type_id: 0
      prop_name: TopSurfaceInput
      prop_type: Enum
      remaining: AAAAAA==
  - Prop:
      type_id: 0
      prop_name: Transparency
      prop_type: Float32
      remaining: AAAAAA==
  - Prop:
      type_id: 0
      prop_name: Velocity
      prop_type: Vector3
      remaining: AAAAAAAAAAAAAAAA
  - Prop:
      type_id: 0
      prop_name: formFactorRaw
      prop_type: Enum
      remaining: AAAAAQ==
  - Prop:
      type_id: 0
      prop_name: shape
      prop_type: Enum
      remaining: AAAAAQ==
  - Prop:
      type_id: 0
      prop_name: size
      prop_type: Vector3
      remaining: gQAAAH8AAACAAAAA
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
  - End
